# oregon-shelf-mhw

./: .gitignore  0-SETUP.ipynb  1A-DOWNLOAD.ipynb  1A-DOWNLOAD_CUTI_BEUTI.ipynb  1B-DOWNLOAD_BLOBTRACKER.ipynb  1B-DOWNLOAD_NASA.ipynb  1C-DOWNLOAD_GEBCO.ipynb  1D-DOWNLOAD_OISSTV2.ipynb  1E-DOWNLOAD_NASA.ipynb  2A-CURATE_OISSTV2.ipynb  2B-CURATE_OOI.ipynb  2C-CURATE_NASA_2015-2023.ipynb  2C-CURATE_NASA_2015.ipynb  2C-CURATE_NASA_2017.ipynb  2C-CURATE_NASA_2018.ipynb  2C-CURATE_NASA_2019.ipynb  2C-CURATE_NASA_2022.ipynb  2C-CURATE_NASA_2023.ipynb  2D-CURATE_NASA_AGG.ipynb  3A-ROI.ipynb  3B-MHWS_CE04.ipynb  3C-OOI_CE01.ipynb  3C-OOI_CE02.ipynb  3C-OOI_CE04.ipynb  3D-NASA_COMPS.ipynb  3D-OOI_CE02.ipynb  3E-CHL_GRADIENT.ipynb  3E-OOI_CE01.ipynb  3F-NASA_COMPS.ipynb  3G-CHL_GRADIENT.ipynb  LICENSE  README.md  download_nasa.py  install_ooijh.sh  pyproject.toml  requirements.txt
extra/: 2C-CURATE_NASA_2015.ipynb  2C-CURATE_NASA_2016.ipynb  2C-CURATE_NASA_2020.ipynb  2C-CURATE_NASA_2021.ipynb  grid_nasa.py
oregon-shelf-mhw/: A-SETUP.ipynb  B-DOWNLOAD_NOAA.ipynb  C-REGION_OF_INTEREST.ipynb  D-ANALYSIS_MHWS.ipynb  E-DOWNLOAD_NASA.ipynb  F-DOWNLOAD_OOI.ipynb  G-ANALYSIS_OOI_1D.ipynb  H-ANALYSIS_NASA.ipynb  I-ANALYSIS_OOI_2D.ipynb  J-APPENDIX_OOI.ipynb
oregon-shelf-mhw/ormhw/: core.py  drops.py  mhw.py  nasa.py  noaa.py  ooi.py  processing.py  transitions.py
ormhw/: blobtracker.py  core.py  cuti.py  gebco.py  oisstv2.py  transitions.py
