[project]
name = "oregon-shelf-mhw"
version = "0.0.1"
authors = [
  { name="Ian Black", email="blackia@oregonstate.edu" },
]
description = "A repository containing notebooks and supporting code for Black et al. (in revision)."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Linux",
]
[project.urls]
"Homepage" = "https://github.com/IanTBlack/oregon-shelf-mhw"
"Bug Tracker" = "https://github.com/IanTBlack/oregon-shelf-mhw/issues"
"Discussions" = "https://github.com/IanTBlack/oregon-shelf-mhw/discussions"